[tool.poetry]
name = "alch-scan"
version = "0.1.0"
description = ""
authors = ["Andrew Nichols <andrew.nichols@debtsy.co>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.19"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
